[project]
name = "pk26pkuser12"
version = "0.1.1"
description = ""
authors = [
    {name = "hyogyungkim",email = "skkuaws0207@skkukdp.re.kr"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
